[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://assets/Merriweather-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/newspaper.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]

size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

size = 17
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]

size = 15
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]

size = 17
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]

size = 17
font_data = ExtResource( 2 )

[node name="CanvasLayer" type="Node"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 560.0
margin_bottom = 360.0
custom_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 520.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "Fake or real news?"
align = 1

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 520.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
text = "Start game"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 520.0
margin_bottom = 282.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_top = 76.0
margin_right = 520.0
margin_bottom = 133.0
custom_constants/separation = 10
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 30.0
margin_bottom = 57.0
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 520.0
margin_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 15

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 22.0
rect_min_size = Vector2( 480, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "News Title"
autowrap = true

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 480.0
margin_bottom = 57.0
rect_min_size = Vector2( 480, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Description Label"
autowrap = true

[node name="VotingButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 292.0
margin_right = 520.0
margin_bottom = 320.0
custom_constants/separation = 40
alignment = 1

[node name="RealNewsButton" type="Button" parent="MarginContainer/VBoxContainer/VotingButtons"]
margin_left = 183.0
margin_right = 238.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 5 )
text = "Real!"

[node name="FakeNewsButton" type="Button" parent="MarginContainer/VBoxContainer/VotingButtons"]
margin_left = 278.0
margin_right = 337.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 6 )
text = "Fake!"

[node name="FakeNewsHTTPRequest" type="HTTPRequest" parent="."]

[node name="RealNewsHTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VotingButtons/RealNewsButton" to="." method="_on_RealNewsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VotingButtons/FakeNewsButton" to="." method="_on_FakeNewsButton_pressed"]
[connection signal="request_completed" from="FakeNewsHTTPRequest" to="." method="_on_FakeNewsHTTPRequest_request_completed"]
[connection signal="request_completed" from="RealNewsHTTPRequest" to="." method="_on_RealNewsHTTPRequest_request_completed"]
